Add export data feature and default destinations support for deployment

--- a/user/index.html
+++ b/user/index.html
@@ -145,6 +145,7 @@
                     <button onclick="loadGrid()">📂 Load</button>
                     <button onclick="toggleReturnPath()" id="toggleReturnPath">🔁 Show Return Path</button>
                     <button onclick="saveGrid()">💾 Save</button>
+                    <button onclick="exportAllData()">📤 Export Data</button>
                     <input type="file" id="loadInput" title="Load grid file" accept=".json" onchange="handleLoad(event)" />
                 </div>
             </div>
